--- a/src/App.css
+++ b/src/App.css
@@ -150,6 +150,11 @@ code {
 
 
 /* COIN */
+
+.coin-info h1 {
+  font-size: 2.5em;
+}
+
 .coin-info .images img {
   width: 95%;
   margin-top: 20px;
