--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,9 @@ code {
   margin-bottom: 0;
 }
 
+.navbar-secondary {
+  margin-right:320px;
+}
 .navbar-secondary ul {
   margin: 0;
   padding: 0;
